Style changes and number input fixes

--- a/src/components/ExchangeBox/styles.css
+++ b/src/components/ExchangeBox/styles.css
@@ -7,10 +7,15 @@
 }
 
 .offset {
-  background-color: #eee;
+  background-color: #fff;
 }
 
 .col {
   flex: 1;
   padding: 0.75rem;
+}
+
+.value {
+  composes: col;
+  text-align: right;
 }
