--- a/src/components/Layout/styles.css
+++ b/src/components/Layout/styles.css
@@ -1,8 +1,11 @@
 .header {
+  background-color: #fff;
+  padding: 1rem;
   text-align: center;
 }
 
 .title {
   font-weight: 600;
   font-size: 1rem;
+  margin: 0;
 }
