--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,9 @@
+*, :before, :after, input {
+  box-sizing: border-box;
+}
+
 body {
+  background-color: #f1f1f1;
   margin: 0;
   padding: 0;
   font-family: sans-serif;
