--- a/src/components/RateComparison/styles.css
+++ b/src/components/RateComparison/styles.css
@@ -1,4 +1,6 @@
 .root {
+  color: #0075eb;
+  font-size: 0.875rem;
   height: 0;
   position: relative;
   text-align: center;
@@ -9,7 +11,6 @@
   border: 1px solid #eee;
   border-radius: 1em;
   display: inline-block;
-  font-size: 0.75rem;
   line-height: 1;
   padding: 0.5em 1em;
   position: relative;
