--- a/src/components/NumberInput/styles.css
+++ b/src/components/NumberInput/styles.css
@@ -2,9 +2,14 @@
   font-size: 2rem;
 }
 
+.dim {
+  color: #999;
+}
+
 .input {
   appearance: none;
   border: none;
+  color: inherit;
   width: auto;
   font-size: 2rem;
   padding: 0 0.25em;
