--- a/src/components/BalanceDisplay/styles.css
+++ b/src/components/BalanceDisplay/styles.css
@@ -1,5 +1,20 @@
 .root {
   color: #555;
   font-size: 0.75rem;
+  -webkit-font-smoothing: auto;
   font-weight: 300;
+}
+
+.amount {
+  background-color: transparent;
+  border-radius: 1em;
+  padding: 0.25em 0em 0.125em;
+  transition: all 0.4s linear 2s;
+}
+
+.hasUpdated {
+  background-color:  #0075eb;
+  color: #fff;
+  padding: 0.25em 0.5em 0.125em;
+  transition: all 0.4s;
 }
